EN-2478 bump dependency versions